--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -711,6 +711,89 @@ CREATE TABLE SYS_USER(
 
 ## 分库分表
 
+配置数据源
+
+```
+{
+	"dbType":"mysql",
+	"idleTimeout":60000,
+	"initSqls":[],
+	"initSqlsGetConnection":true,
+	"instanceType":"READ_WRITE",
+	"maxCon":1000,
+	"maxConnectTimeout":3000,
+	"maxRetryCount":5,
+	"minCon":1,
+	"name":"prototypeDs",
+	"password":"jadfsdfgasdw",
+	"type":"JDBC",
+	"url":"jdbc:mysql://localhost:3306?useUnicode=true&serverTimezone=Asia/Shanghai&characterEncoding=UTF-8",
+	"user":"root",
+	"weight":0
+}
+
+```
+
+创建集群，只将prototypeDs数据源作为主机，不设置从机
+
+```
+{
+	"clusterType":"MASTER_SLAVE",
+	"heartbeat":{
+		"heartbeatTimeout":1000,
+		"maxRetryCount":3,
+		"minSwitchTimeInterval":300,
+		"showLog":false,
+		"slaveThreshold":0.0
+	},
+	"masters":[
+		"prototypeDs"
+	],
+	"maxCon":2000,
+	"name":"c0",
+	"readBalanceType":"BALANCE_ALL",
+	"replicas":[],
+	"switchType":"SWITCH"
+}
+
+```
+
+### 分库分表
+
+在 Mycat 终端直接运行建表语句进行数据分片，dbpartition是分库规则，tbpartition是分表规则，tbpartitions 1标识分一张表， dbpartitions 2表示分两个库
+
+```
+CREATE TABLE farm.orders(
+id BIGINT NOT NULL AUTO_INCREMENT,
+order_type INT,
+customer_id INT,
+amount DECIMAL(10,2),
+PRIMARY KEY(id),
+KEY `id` (`id`)
+)ENGINE=INNODB DEFAULT CHARSET=utf8
+dbpartition BY mod_hash(customer_id) tbpartition BY mod_hash(customer_id)
+tbpartitions 1 dbpartitions 2;
+
+```
+
+分库分表步骤：
+
+1.需要按照自自定义分区方式
+
+2.在 mycat 中执行脚本之后会自动根据创建的表进行分表创建
+
+分片算法：
+
+| 分片算法    | 描述     | 分库 | 分表 | 数值类型      |
+| ----------- | -------- | ---- | ---- | ------------- |
+| UNI_HASH    | 取模哈希 | 是   | 是   | 数值,字符串   |
+| MOD_HASH    | 取模哈希 | 是   | 是   | 数值,字符串   |
+| RIGHT_SHIFT | 右移哈希 | 是   | 是   | 数值          |
+| YYYYMM      | 按月哈希 | 是   | 是   | DATE,DATETIME |
+| YYYYDD      | 按月哈希 | 是   | 是   | DATE,DATETIME |
+| YYYYWEEK    | 按周哈希 | 是   | 是   | DATE,DATETIME |
+|             |          |      |      |               |
+
 
 
 
