--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -768,11 +768,18 @@ id BIGINT NOT NULL AUTO_INCREMENT,
 order_type INT,
 customer_id INT,
 amount DECIMAL(10,2),
-PRIMARY KEY(id),
-KEY `id` (`id`)
+PRIMARY KEY(id)
 )ENGINE=INNODB DEFAULT CHARSET=utf8
 dbpartition BY mod_hash(customer_id) tbpartition BY mod_hash(customer_id)
 tbpartitions 1 dbpartitions 2;
+
+
+
+CREATE TABLE mydatabase.test_user ( id BIGINT NOT NULL AUTO_INCREMENT,
+name VARCHAR(32),
+tage VARCHAR(32), 
+create_time timestamp, PRIMARY KEY (id) ) ENGINE = INNODB CHARSET = utf8 DBPARTITION BY mod_hash(id) DBPARTITIONS  TBPARTITION BY mod_hash(id) TBPARTITIONS 1;
+
 
 ```
 
@@ -795,6 +802,15 @@ tbpartitions 1 dbpartitions 2;
 |             |          |      |      |               |
 
 
+
+和mybatis 集成，只需改下jdbc连接url对应的端口和数据库名称就好了
+
+错误-主键雪花策略：Data truncation: Out of range value for column 'id' at row 1
+报错：Data truncation: Out of range value for column 'id' at row 1
+
+原因：mycat 开启主键雪花策略，生成19位随机字符串，数据库中的主键字段为int类型，长度小于19位。
+
+解决：将数据库中表的主键字段设置为bigint类型
 
 
 
