--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -774,11 +774,17 @@ dbpartition BY mod_hash(customer_id) tbpartition BY mod_hash(customer_id)
 tbpartitions 1 dbpartitions 2;
 
 
+CREATE DATABASE mydatabase;
 
-CREATE TABLE mydatabase.test_user ( id BIGINT NOT NULL AUTO_INCREMENT,
+CREATE TABLE mydatabase.test_user ( 
+id BIGINT NOT NULL AUTO_INCREMENT,
 name VARCHAR(32),
-tage VARCHAR(32), 
-create_time timestamp, PRIMARY KEY (id) ) ENGINE = INNODB CHARSET = utf8 DBPARTITION BY mod_hash(id) DBPARTITIONS  TBPARTITION BY mod_hash(id) TBPARTITIONS 1;
+age VARCHAR(32), 
+create_time timestamp DEFAULT CURRENT_TIMESTAMP,
+PRIMARY KEY (id)  ) 
+ENGINE=INNODB DEFAULT CHARSET=utf8
+dbpartition BY mod_hash(id) tbpartition BY mod_hash(id)
+tbpartitions 1 dbpartitions 2;
 
 
 ```
