--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -820,4 +820,14 @@ tbpartitions 1 dbpartitions 2;
 
 
 
+ ERROR-CODE: [MYCAT-3002][ERR_FETCH_METADATA] MetadataManager init fail
+
+问题原因：
+
+不带分区时，创建没有问题，带上分区出现问题，说明分区创建有问题所以仔细看了之后发现 分区的id 在表中不存在，因为是复制的脚本，忘记修改分区id，修改为表中存在的id之后，分表创建正常
+
+
+
+
+
 # 数据库中间件 Sharding JDBC
