--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -787,6 +787,86 @@ dbpartition BY mod_hash(id) tbpartition BY mod_hash(id)
 tbpartitions 1 dbpartitions 2;
 
 
+#  创建自增序列
+
+-- 1、在第一个数据库节点上创建 MYCAT_SEQUENCE 表
+ 
+DROP TABLE IF EXISTS MYCAT_SEQUENCE;
+CREATE TABLE MYCAT_SEQUENCE (
+name VARCHAR(50) NOT NULL,
+current_value INT NOT NULL,
+increment INT NOT NULL DEFAULT 1,
+remark varchar(100),
+PRIMARY KEY(name)) ENGINE=InnoDB;
+ 
+-- 2、创建存储过程——获取当前 sequence 的值
+DROP FUNCTION IF EXISTS `mycat_seq_currval`;
+DELIMITER ;;
+CREATE DEFINER=`root`@`%` FUNCTION `mycat_seq_currval`(seq_name VARCHAR(50)) RETURNS varchar(64)
+CHARSET latin1
+DETERMINISTIC
+BEGIN
+DECLARE retval VARCHAR(64);
+SET retval="-999999999,null";
+SELECT concat(CAST(current_value AS CHAR),",",CAST(increment AS CHAR) ) INTO retval FROM
+MYCAT_SEQUENCE WHERE name = seq_name;
+RETURN retval ;
+END
+;;
+DELIMITER ;
+ 
+-- 3、创建存储过程，获取下一个 sequence
+ 
+DROP FUNCTION IF EXISTS `mycat_seq_nextval`;
+DELIMITER ;;
+CREATE DEFINER=`root`@`%` FUNCTION `mycat_seq_nextval`(seq_name VARCHAR(50)) RETURNS varchar(64)
+CHARSET latin1
+DETERMINISTIC
+BEGIN
+UPDATE MYCAT_SEQUENCE
+SET current_value = current_value + increment WHERE name = seq_name;
+RETURN mycat_seq_currval(seq_name);
+END
+;;
+DELIMITER ;
+ 
+-- 4、创建存储过程，设置 sequence
+ 
+DROP FUNCTION IF EXISTS `mycat_seq_setval`;
+DELIMITER ;;
+CREATE DEFINER=`root`@`%` FUNCTION `mycat_seq_setval`(seq_name VARCHAR(50), value INTEGER)
+RETURNS varchar(64) CHARSET latin1
+DETERMINISTIC
+BEGIN
+UPDATE MYCAT_SEQUENCE
+SET current_value = value
+WHERE name = seq_name;
+RETURN mycat_seq_currval(seq_name);
+END
+;;
+DELIMITER ;
+ 
+-- 5、插入记录 ,设置为0 id从1自增。 select mydatabase.mycat_seq_nextval('mydatabase_test_user')
+INSERT INTO MYCAT_SEQUENCE(name,current_value,increment,remark) VALUES ('mydatabase_test_user', 0, 1,'test_user id seq');
+
+
+设置序列
+/*+ mycat:setSequence{"name":"mydatabase_test_user","time":true} */;
+
+
+
+/*+ mycat:setSequence{
+"name":"mydatabase_test_user",
+"clazz":"io.mycat.plug.sequence.SequenceMySQLGenerator",
+"name":"mydatabase_test_user",
+  "targetName": "prototype",
+  "schemaName":"mydatabase"
+  } */;
+
+
+
+/*+ mycat:setSequence
+{"name":"mydatabase_test_user","clazz":"io.mycat.plug.sequence.SequenceMySQLGenerator"} */;
 ```
 
 分库分表步骤：
