--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -869,6 +869,33 @@ INSERT INTO MYCAT_SEQUENCE(name,current_value,increment,remark) VALUES ('mydatab
 {"name":"mydatabase_test_user","clazz":"io.mycat.plug.sequence.SequenceMySQLGenerator"} */;
 ```
 
+
+
+添加mycat序列，需要执行  dbseq.sql  这个脚本在 mycat\conf 目录下
+
+执行完成之后添加
+
+序列的命名规范是 `物理库名` + `_` + `物理表名` ，对应的物理存储的序列配置文件名称为 `物理库名` + `_` + `物理表名` + `.sequence.json` 。
+
+
+
+Mycat 全局序列的核心要点其实是：
+
+- 执行 `dbseq.sql` 在原型库创建全局序列表及相关函数。
+- 序列名称符合命名规范。
+- 向全局序列表中插入要创建的序列的记录。
+- 使用 `AUTO_INCREMENT`
+
+
+
+insert into mycat_sequence values('mydatabase_test_user',0,1);
+
+select mydatabase.mycat_seq_nextval('mydatabase_test_user')
+
+
+
+
+
 分库分表步骤：
 
 1.需要按照自自定义分区方式
