--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -849,8 +849,9 @@ DELIMITER ;
 -- 5、插入记录 ,设置为0 id从1自增。 select mydatabase.mycat_seq_nextval('mydatabase_test_user')
 INSERT INTO MYCAT_SEQUENCE(name,current_value,increment,remark) VALUES ('mydatabase_test_user', 0, 1,'test_user id seq');
 
+ insert into mycat_sequence values('mydatabase_test_user',0,1);
 
-设置序列
+可以不用设置序列设置序列
 /*+ mycat:setSequence{"name":"mydatabase_test_user","time":true} */;
 
 
@@ -892,7 +893,7 @@ insert into mycat_sequence values('mydatabase_test_user',0,1);
 
 select mydatabase.mycat_seq_nextval('mydatabase_test_user')
 
-
+单库方式可以用此种方式实现id递增，如果多库方式需要借助zookeeper
 
 
 
@@ -934,6 +935,10 @@ select mydatabase.mycat_seq_nextval('mydatabase_test_user')
 不带分区时，创建没有问题，带上分区出现问题，说明分区创建有问题所以仔细看了之后发现 分区的id 在表中不存在，因为是复制的脚本，忘记修改分区id，修改为表中存在的id之后，分表创建正常
 
 
+
+Data truncation: Out of range value for column ‘id‘ at row 1
+
+错误是：数据字段长度不够了
 
 
 
