--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -572,8 +572,25 @@ dns-list 114.114.114.114
 dhcp select global
 排除ip不分配
 excluded-ip-address  192.168.1.3 
+# 绑定一些设备的固定mac地址
+static-bind ip-address  192.168.1.3   mac-address
 ```
 
+#acl 访问控制
+acl 2000 
+
+acl 编号
+
+#挑选数据包 
+rule permit source 192.168.1.0  0.0.0.255
+
+#绑定
+进入三层交换机vlan  
+int g0/0/3  进入外网口
+
+nat outbound 2000  从3口出去的包 并且是acl 2000 挑选的包
+
+```
 ## 交换机
 
 全双工，自动协商速率
