--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -590,6 +590,15 @@ int g0/0/3  进入外网口
 
 nat outbound 2000  从3口出去的包 并且是acl 2000 挑选的包
 
+创建链路聚合
+
+int Eth_Trunk 1
+port link-type trunck 
+####设置可以通过的vlan 聚合vlan
+port trunck allow-pass vlan 10 20 
+####添加 两个port 进行聚合
+trunckport GigabitEthernet 0/0/1 0/0/2
+
 ```
 ## 交换机
 
