--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -488,6 +488,8 @@ display mac-address
 
 查看nat Session 会话
 display nat session all
+映射公网ip到内网
+nat server protocol tcp global current-interface www inside  192.168.200.20  www
 
 ```
 
