--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -16,9 +16,9 @@ MQ要想尽量消息必达，架构上有两个核心设计点：
 
 
 
-# Rabbit MQ相关
+## Rabbit MQ相关
 
-## 1.介绍
+### 1.介绍
 
 ![](images\rabitmq_arc.png)
 
@@ -158,7 +158,7 @@ channel.basic_qos(prefetch_count=1)
 
  
 
-## 5.安装
+### 5.安装
 
 下载地址
 
@@ -333,7 +333,7 @@ rabbitmqctl list_users
 
 
 
-## 6.使用
+### 6.使用
 
 http://192.168.182.142:15672/#/
 
@@ -359,13 +359,7 @@ java client
 
 
 
-
-
-
-
-
-
-## 7.常见问题
+### 7.常见问题
 
 ### 7.1 vhost testhost not found, class-id=10, method-
 
@@ -375,9 +369,11 @@ vhosts拒绝guest用户。
 在Admin中查看vhosts，只有一个“/”
 将项目中的配置改为"/"即可
 
-## 8.参考资料
+### 8.参考资料
 
 
+
+## Kafka相关
 
 
 
@@ -942,4 +938,27 @@ Data truncation: Out of range value for column ‘id‘ at row 1
 
 
 
+参考文档
+
+https://www.yuque.com/ccazhw/ml3nkf/efbole
+
+
+
+集群配置：
+
+
+
+
+
+
+
+
+
 # 数据库中间件 Sharding JDBC
+
+
+
+
+
+# 分布式中间件 zookeeper
+
