--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -377,6 +377,37 @@ vhosts拒绝guest用户。
 
 
 
+kafka 依赖
+
+.\bin\windows\kafka-server-start.bat .\config\server.properties
+
+
+
+#### 创建topics
+
+以管理员权限新开一个命令提示窗口，进入**D:\bigdata\kafka\2.12-3.5.1\bin\windows**目录，执行以下命令，创建topics：
+
+```
+kafka-topics.bat --create --bootstrap-server localhost:9092 --replication-factor 1 --partitions 1 --topic test
+
+Created topic test.
+查询toppic
+kafka-topics.bat  --bootstrap-server localhost:9092 --list
+打开生产者
+kafka-console-producer.bat --broker-list localhost:9092 --topic test
+打开消费者
+kafka-console-consumer.bat --bootstrap-server localhost:9092 --topic test --from-beginning
+
+```
+
+zookeeper 配置
+
+配置zookeeper 连接  （server.properties）
+
+zookeeper.connect=localhost:2181,localhost:2182,localhost:2183
+
+
+
 # 数据库中间件 mycat
 
 1.安装
@@ -961,4 +992,6 @@ https://www.yuque.com/ccazhw/ml3nkf/efbole
 
 
 # 分布式中间件 zookeeper
+
+
 
