--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -643,3 +643,8 @@ set authentication-mode password simple 222
 设置用户级别（用户等级为3，也就是最高的，华为的命令级别很多，分为四级，0 1 2 3  ，0是参观级，只能看，1比0要高，可以使用一些命令，2 是可以配置了，3可以备份与删除IOS啦）
 user privilege level 3  
 
+
+配置 DHCP的地址池 
+```
+option 43  ip-address 1.1.1.1
+```
