--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -375,11 +375,28 @@ vhosts拒绝guest用户。
 
 ## Kafka相关
 
+架构：
+
+
+
+
+
 
 
 kafka 依赖
 
 .\bin\windows\kafka-server-start.bat .\config\server.properties
+
+
+
+```
+设置日志路径
+log.dirs=..\\logs
+配置zookper 连接中心
+zookeeper.connect=localhost:2181,localhost:2182,localhost:2183
+```
+
+
 
 
 
@@ -395,8 +412,19 @@ Created topic test.
 kafka-topics.bat  --bootstrap-server localhost:9092 --list
 打开生产者
 kafka-console-producer.bat --broker-list localhost:9092 --topic test
-打开消费者
+打开消费者  --from-beginning：会把主题中以往所有的数据都读取出来
 kafka-console-consumer.bat --bootstrap-server localhost:9092 --topic test --from-beginning
+
+
+kafka-console-producer.bat --broker-list  localhost:9092    --topic test
+
+
+//修改分区数
+kafka-topics.sh --zookeeper localhost:9092  --alter --topic test --partitions 6
+kafka-topics.bat  --zookeeper localhost:9092  --alter --topic test --partitions 6
+//删除 topic
+kafka-topics.sh --delete --zookeeper localhost:9092  --topic test
+ kafka-topics.bat  --delete --zookeeper localhost:9092  --topic test
 
 ```
 
@@ -407,6 +435,48 @@ zookeeper 配置
 zookeeper.connect=localhost:2181,localhost:2182,localhost:2183
 
 
+
+#### Broker
+
+Broker作为kafka的一个组件，主要是用户存储和转发消息的，它做的事情就像是中介，kafka的一台服务器就是一个broker，对外开发发送、接收消息的端口默认为9092。生产者和消费者都需要和broker建立连接才能收发消息。
+
+
+
+注意事项：
+
+1.消费者poll到消息后默认情况下，会自动向broker的_consumer_offsets主题提交当前主题-分区消费的偏移量。
+
+自动提交会丢消息： 因为如果消费者还没消费完poll下来的消息就自动提交了偏移量，那么此时消费者挂了，于是下一个消费者会从已提交的offset的下一个位置开始消费消息。之前未被消费的消息就丢失掉了。 
+
+auto.offset.reset有以下三个可选值：
+
+latest (默认)
+earliest
+none
+
+
+
+#### 优缺点对比：
+
+##### 优点：
+
+##### 缺点：
+
+
+
+
+
+问题：
+
+ERROR Exiting Kafka due to fatal exception during startup. (kafka.Kafka$)
+kafka.common.InconsistentClusterIdException: The Cluster ID CaoegNzgQImpR9G-dpg7SQ doesn’t match stored clusterId Some(HyzBmmDkQi-K8Ai1XFgiaA) in meta.properties. The broker is trying to join the wrong cluster. Configured zookeeper.connect may be wrong.
+这个可能是由于kafka重复启动或者非正常关闭造成的
+
+解决一：
+在server.properties 配置文件里面 找到 log.dirs 配置的路径，在该路径下找到meta.properties文件，按照报错提示，将meta.properties文件里面的cluster.id修改为报错提示的Cluster ID，重新启动kafka。
+
+解决二：
+在server.properties 配置文件里面 找到 log.dirs 配置的路径，将该路径下的文件全部删除，重新启动kafka
 
 # 数据库中间件 mycat
 
@@ -976,6 +1046,12 @@ https://www.yuque.com/ccazhw/ml3nkf/efbole
 
 
 集群配置：
+
+
+
+
+
+
 
 
 
