--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -440,6 +440,10 @@ zookeeper.connect=localhost:2181,localhost:2182,localhost:2183
 
 Broker作为kafka的一个组件，主要是用户存储和转发消息的，它做的事情就像是中介，kafka的一台服务器就是一个broker，对外开发发送、接收消息的端口默认为9092。生产者和消费者都需要和broker建立连接才能收发消息。
 
+#### Partition
+
+为了实现扩展性，一个非常大的 topic 可以分布到多个 broker（即服务器）上，一个 topic 可以分割为一个或多个 partition，每个 partition 是一个有序的队列。Kafka 只保证 partition 内的记录是有序的，而不保证 topic 中不同 partition 的顺序 
+
 
 
 注意事项：
