--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -446,6 +446,28 @@ Broker作为kafka的一个组件，主要是用户存储和转发消息的，它
 
 
 
+##### 删除消息的注意事项
+
+在消费后删除消息时，需要注意以下几点：
+
+消费者需要设置 enable.auto.commit 参数为 false，以禁用自动提交偏移量。
+消费者需要调用 consumer.commitSync() 方法来手动提交偏移量，并删除已消费的消息。
+在处理消息时，如果发生了异常或错误，需要正确处理异常并防止提交偏移量，以避免消息丢失或重复消费
+
+只管发送提交，无需等待broker 的响应。commitAsync() 提交最后一个偏移量，然后继续做其他事。在碰到无法恢复的错误之前，commitSync() 会一直重试，但 commitAsync() 不会。原因是因为重试的过程中，可能有一个更大的偏移量提交成功了。但它提供了回调，当 broker 作出响应时会执行回调。回调经常用于记录提交错误或生成度量指标，不过如果要进行重试，那一定要注意顺序（对比回调中的偏移量是否与提交的偏移量相等，相等说明没有新的提交）。
+
+
+
+在创建消费者时，有一点要注意：**不要让消费者的数量超过主题分区的数量，多余的消费者只会被闲置**	
+
+多个消费者群组可以订阅同一个主题的所有分区，每个消费者群组都会消费这个主题下的所有分区的所有消息，各个消费者群组互不干扰
+
+
+
+同一个group的消费者只能消费一次同一个消息
+
+
+
 注意事项：
 
 1.消费者poll到消息后默认情况下，会自动向broker的_consumer_offsets主题提交当前主题-分区消费的偏移量。
