--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -458,13 +458,31 @@ Broker作为kafka的一个组件，主要是用户存储和转发消息的，它
 
 
 
-在创建消费者时，有一点要注意：**不要让消费者的数量超过主题分区的数量，多余的消费者只会被闲置**	
+1.在创建消费者时，有一点要注意：**不要让消费者的数量超过主题分区的数量，多余的消费者只会被闲置**	
 
-多个消费者群组可以订阅同一个主题的所有分区，每个消费者群组都会消费这个主题下的所有分区的所有消息，各个消费者群组互不干扰
+2.多个消费者群组可以订阅同一个主题的所有分区，每个消费者群组都会消费这个主题下的所有分区的所有消息，各个消费者群组互不干扰
 
 
 
-同一个group的消费者只能消费一次同一个消息
+
+
+3.同一个group的消费者只能消费一次同一个消息
+
+4.**同时消费多个主题 kafka多个消费组消费一个topic**， 有两种分配策略：range和 轮询策略。
+
+range : 分区按照顺序平铺，消费者按照顺序平铺 
+
+具体算法：假设区分数量为pCout，消费者数量为cCount
+
+n = pCout / cCount   8  / 3 = 2
+
+m = pCount % cCount  8 % 3 = 2
+
+轮询策略:
+
+分区按照编号顺序分配给消费者
+
+
 
 
 
