--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -466,7 +466,7 @@ Broker作为kafka的一个组件，主要是用户存储和转发消息的，它
 
 
 
-3.同一个group的消费者只能消费一次同一个消息
+3.同一个group的消费者只能消费一次同一个消息。  topic只有1个partition,该组内有多个消费者时，此时同一个partition内的消息只能被该组中的一 个consumer消费。
 
 4.**同时消费多个主题 kafka多个消费组消费一个topic**， 有两种分配策略：range和 轮询策略。
 
@@ -482,7 +482,8 @@ m = pCount % cCount  8 % 3 = 2
 
 分区按照编号顺序分配给消费者
 
-
+注意： 消费者的数量并不能决定一个topic的并行度。它是由分区的数目决定的。
+再多的消费者，分区数少，也是浪费
 
 
 
