--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -644,9 +644,23 @@ set authentication-mode password simple 222
 user privilege level 3  
 
 
-配置 DHCP的地址池 
+配置 DHCP 的地址池 
 ```
+指定AP的的AC地址
 option 43  ip-address 1.1.1.1
 放行所有vlan
 trunk  allow-pass vlan all 
+#添加默认路由
+ip route-static 0.0.0.0 0 1.1.1.2
+#查看路由
+dis ip routing-table
+```
+
+AC 配置
+```
+#ap 组 
+
+
+display  ap all 
+
 ```
