--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -664,3 +664,10 @@ AC 配置
 display  ap all 
 
 ```
+
+无线 AC 转发模式： 
+1. tunnel  模式：ap 收到的数据先转发给AC 由AC集中转发，这种会有流量性能 瓶颈
+2. direct-forward ap 收到的数据直接转发给核心网，性能高
+
+vap  实现一个AP放出多个ssid  
+隐藏 ssid ssid-hide  enable  (如果是华为设备 可以在华为官网上查找相关手册)
