--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -671,3 +671,11 @@ display  ap all
 
 vap  实现一个AP放出多个ssid  
 隐藏 ssid ssid-hide  enable  (如果是华为设备 可以在华为官网上查找相关手册)
+
+大型wlan实例实现方案：
+1.需要考虑的问题 
+  - 设备统一管理
+  - 漫游
+  - 接入终端安全
+  - 高可用技术  双机冷备 双机热备 N+1 备份等多种高可靠性技术保障
+2. 
