--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -662,7 +662,6 @@ AC 配置
 
 
 display  ap all 
-
 ```
 
 无线 AC 转发模式： 
@@ -672,6 +671,12 @@ display  ap all
 vap  实现一个AP放出多个ssid  
 隐藏 ssid ssid-hide  enable  (如果是华为设备 可以在华为官网上查找相关手册)
 
+### vlan pool   把不同的用户分配到不同的vlan， 可以减少广播域，减少广播报文，提升网络性能。
+### DHCP Option 43 & 52 当AC和AP 间是三层组网时，AP 发送的广播请求报文的方式无法发现AC，这时需要DHCP服务器回应给AP的报文中携带 Option43 字段或者 Option52(IPv6) 来通告AC的IP地址
+### 漫游技术 WLAN 漫游是指STA在不同的AP覆盖范围之内移动且保持用户业务不中断的行为
+
+
+
 大型wlan实例实现方案：
 1.需要考虑的问题 
   - 设备统一管理
@@ -679,3 +684,4 @@ vap  实现一个AP放出多个ssid
   - 接入终端安全
   - 高可用技术  双机冷备 双机热备 N+1 备份等多种高可靠性技术保障
 2. 
+
