--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -672,6 +672,22 @@ vap  实现一个AP放出多个ssid
 隐藏 ssid ssid-hide  enable  (如果是华为设备 可以在华为官网上查找相关手册)
 
 ### vlan pool   把不同的用户分配到不同的vlan， 可以减少广播域，减少广播报文，提升网络性能。
+```
+配置 vlan poll
+##进入AC 的vlan 视图
+vlan  pool pool-name
+将指定的vlan 添加到 vlan pool 中。
+vlan  1-10
+配置分配算法
+assignment even | hash 
+配置（AC）VAP的业务WLAN
+vlan 
+vap-profile name profile-name
+service-vlan vlan-pool  pool-name
+
+
+```
+
 ### DHCP Option 43 & 52 当AC和AP 间是三层组网时，AP 发送的广播请求报文的方式无法发现AC，这时需要DHCP服务器回应给AP的报文中携带 Option43 字段或者 Option52(IPv6) 来通告AC的IP地址
 ### 漫游技术 WLAN 漫游是指STA在不同的AP覆盖范围之内移动且保持用户业务不中断的行为
 
