--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -691,6 +691,9 @@ service-vlan vlan-pool  pool-name
 ### DHCP Option 43 & 52 当AC和AP 间是三层组网时，AP 发送的广播请求报文的方式无法发现AC，这时需要DHCP服务器回应给AP的报文中携带 Option43 字段或者 Option52(IPv6) 来通告AC的IP地址
 ### 漫游技术 WLAN 漫游是指STA在不同的AP覆盖范围之内移动且保持用户业务不中断的行为
 
+### 热备
+VRRP 双机热备 
+两台AC组成一个VRRP组，主备AC对AP始终显示为同一个虚拟IP地址，主AC通过Hot StandBy 主备信道同步业务信息到备AC上
 
 
 大型wlan实例实现方案：
