--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -694,7 +694,18 @@ service-vlan vlan-pool  pool-name
 ### 热备
 VRRP 双机热备 
 两台AC组成一个VRRP组，主备AC对AP始终显示为同一个虚拟IP地址，主AC通过Hot StandBy 主备信道同步业务信息到备AC上
+AP 只能看到一个IP
+配置命令：
+```
 
+
+```
+
+
+双链路双机热备
+
+AC可靠性：N+1
+是指在AC+FIT AP的网络架构中，使用一台AC作为备AC，为多台主AC提供备份服务的一种解决方案。网络正常情况下AP只与各自所属的AC建立capwap链路，当主AC故障或者与AP间capwap链路故障时，备份AC替代主AC来管理AP，备AC与AP间建立wapcap链路，为AP提供服务
 
 大型wlan实例实现方案：
 1.需要考虑的问题 
