--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -662,6 +662,17 @@ AC 配置
 
 
 display  ap all 
+
+## ac 配置 HBS 双机热备
+创建hsb 服务
+hsb-service 0
+
+service-ip-port local-ip 10.1.10.100 peer-ip 10.1.10.200 local-data-port 10241 peer-data-port 10241
+## 配置热备组
+hsb-group 0 
+
+bind-service 0 
+
 ```
 
 无线 AC 转发模式： 
@@ -672,6 +683,10 @@ vap  实现一个AP放出多个ssid
 隐藏 ssid ssid-hide  enable  (如果是华为设备 可以在华为官网上查找相关手册)
 
 ### vlan pool   把不同的用户分配到不同的vlan， 可以减少广播域，减少广播报文，提升网络性能。
+
+创建多个vap-group  来实现 vlan pool的形式
+
+
 ```
 配置 vlan poll
 ##进入AC 的vlan 视图
