--- a/笔记/中间件.md
+++ b/笔记/中间件.md
@@ -456,7 +456,19 @@ Broker作为kafka的一个组件，主要是用户存储和转发消息的，它
 
 只管发送提交，无需等待broker 的响应。commitAsync() 提交最后一个偏移量，然后继续做其他事。在碰到无法恢复的错误之前，commitSync() 会一直重试，但 commitAsync() 不会。原因是因为重试的过程中，可能有一个更大的偏移量提交成功了。但它提供了回调，当 broker 作出响应时会执行回调。回调经常用于记录提交错误或生成度量指标，不过如果要进行重试，那一定要注意顺序（对比回调中的偏移量是否与提交的偏移量相等，相等说明没有新的提交）。
 
+#### @KafkaListener注解
 
+(1) id: 默认是每个Listener实例的重要标识。
+
+(2) goupId: 每个消费者所属的组。
+
+(3) clientIdPrefix: 消费者clientId前缀
+
+(4) autoStartup 是否自动启动,如果是 false,默认不生效,需要手动唤醒 看源代码上作者给的的注释：**该注解指定的值优先级比工厂里指定的高。**
+
+
+
+#### 分组
 
 1.在创建消费者时，有一点要注意：**不要让消费者的数量超过主题分区的数量，多余的消费者只会被闲置**	
 
