--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -664,6 +664,14 @@ AC 配置
 display  ap all 
 
 ## ac 配置 HBS 双机热备
+
+配置流程： 
+1. 配置VRRP备份组
+2. 配置HSB主备份服务
+3. 配置HSB备份组
+4. 使能HSB备份组
+5. 检查配置效果
+
 创建hsb 服务
 hsb-service 0
 
@@ -672,6 +680,9 @@ service-ip-port local-ip 10.1.10.100 peer-ip 10.1.10.200 local-data-port 10241 p
 hsb-group 0 
 
 bind-service 0 
+
+## 虚拟路由冗余协议VRRP 配置之后及时将业务切换到备份路由设备，从而保持通讯的连续性和可靠性。
+track vrrp vrid 1 interface Vlanif10 
 
 ```
 
@@ -716,6 +727,8 @@ AP 只能看到一个IP
 
 ```
 
+
+MPLS 
 
 双链路双机热备
 
