--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -515,7 +515,7 @@ nslookup www.jd.com
 
 二层交换机：数据转发 ，只能支持同网段的访问，不支持不同网段访问
 三层交换机：数据交换+ 路由功能，支持不同网段访问
-三层交换机配置不同网段，
+三层交换机配置不同网段， 性能指标要三层转发性能二层转发性能
 
 通过vlan ip做网关，实现不同vlan的路由，也就是说不同网段的vlanIP 需要配置成网关IP才能支持不同网段互相访问
 
@@ -728,7 +728,8 @@ AP 只能看到一个IP
 ```
 
 
-MPLS 
+MPLS  专线 数据打标签
+
 
 双链路双机热备
 
