--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -27,9 +27,6 @@
 3. 流量控制
 4. 服用分用
 
-   在RSTP标准中，为了提高收敛速度，将交换机直接与终端相连的端口定义为边缘端口
-=======
-
 在RSTP标准中，为了提高收敛速度，将交换机直接与终端相连的端口定义为边缘端口
 
 STP生成树的生成过程大概如下：
@@ -79,7 +76,11 @@ DIS和DR与所路由器互相都是邻接关系
 
 
 
-
+# NAT
+1. 静态NAT设计   适用于有较多静态IP且客户端需要使用固定IP地址的场景
+2. 动态NAT  取地址池中的地址给用户访问Internet
+3. NAPT 与Easy IP  NAPT在动态NAT的基础上对端口也进行转换，提高公网地址利用效率。Easy IP适用于网络出接口地址动态场景。
+4. NATS erver 适合内网有服务向外提供服务的场景
 
 
 # BGP
@@ -514,6 +515,7 @@ nslookup www.jd.com
 ###  二层交换机和三层交换机
 
 二层交换机：数据转发 ，只能支持同网段的访问，不支持不同网段访问
+二层开启 生成树技术可以防止环路
 三层交换机：数据交换+ 路由功能，支持不同网段访问
 三层交换机配置不同网段， 性能指标要三层转发性能二层转发性能
 
