--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -605,6 +605,10 @@ port trunck allow-pass vlan 10 20
 ####添加 两个port 进行聚合
 trunckport GigabitEthernet 0/0/1 0/0/2
 
+
+
+radio 1                      ##0为2.4G/1为5G
+
 ```
 ## 交换机
 
@@ -627,7 +631,7 @@ mac 地址的老化时间300s
 
 #### 转发方式：
 
-1. ​	存储转发 完整收到帧 并检查无误之后转发。缺点是延迟较大且不固定，因为在转发之前要收到并处理完整的帧。
+1. 存储转发 完整收到帧 并检查无误之后转发。缺点是延迟较大且不固定，因为在转发之前要收到并处理完整的帧。
 
 2. 碎片隔离
 
@@ -656,11 +660,20 @@ trunk  allow-pass vlan all
 ip route-static 0.0.0.0 0 1.1.1.2
 #查看路由
 dis ip routing-table
+
 ```
 
 AC 配置
 ```
 #ap 组 
+
+查看 APmac
+
+dis int g0/0/0
+
+
+
+
 
 
 display  ap all 
