--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -617,7 +617,15 @@ radio 1                      ##0为2.4G/1为5G
 使用命令：
 
 ```
+```
+查看地址池
+display ip pool interface vlanif10
+```
+
+
+
 # 查看本地arp表内容
+
 arp -a
 # 交换机查看arp mac地址表
 sh mac-addres-table
