--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -649,6 +649,29 @@ undo port access allow-pass vlan
 
 去除设置的端口类型
 undo port    link-type
+
+查看IP 配置信息
+
+display ip interface brief
+
+简写命令
+
+dis ip int b
+
+
+
+ip route-static 192.17.1.0 255.255.255.0 192.16.1.2
+
+
+
+ip route-static 192.168.3.0 255.255.255.0 192.16.1.2
+
+
+
+ip route-static 192.16.1.0 255.255.255.0 192.17.1.2
+
+
+
 ```
 
 
@@ -798,3 +821,5 @@ AC可靠性：N+1
   - 高可用技术  双机冷备 双机热备 N+1 备份等多种高可靠性技术保障
 2. 
 
+
+```
