--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -619,7 +619,12 @@ radio 1                      ##0为2.4G/1为5G
 ```
 ```
 查看地址池
+display ip pool
 display ip pool interface vlanif10
+
+undo capwap source interface vlanif 100
+capwap source interface vlanif 101
+
 ```
 
 
