--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -625,9 +625,53 @@ display ip pool interface vlanif10
 undo capwap source interface vlanif 100
 capwap source interface vlanif 101
 
+
+display ssid-profile name default ：可以看到SSID默认模板里面是内置了一个SSID的
+安全模板
+
+display security-profile all：默认系统内置三个，一个正常业务使用、一个WDS、一个mesh组网的时候，我们目前主要了解default
+display security-profile name default
+
+VAP模板
+display vap-profile all   查看所有的vap 模板
+display vap-profile name  office-vap  查看指定的vap
+流量模板
+display traffic-profile all：默认存在一个default
+
+display traffic-profile name default：流量模板的作用（1）提供VAP或者每客户端的限速 （2） 控制某些流量能否访问，比如只能访问外网 （3）CAPWAP等优先级
+AP组
+display ap-group name default：显示很长，就截图了关键的部分，默认情况下是调用了射频组 2.4G 5G，vap profile是没有调用的，这个是我们在配置的时候配置上去的
+
+
+创建ssid 模板
+
+wlan 
+ssid-profile name WIFI
+ssid WIFI
+
+添加安全 认证
+security-profile name WIFI
+设置密码
+security  wpa2 psk pass-phrase 88888888 aes
+创建vap 文件
+vap-profile  name WIFI
+ssid-profile  WIFI
+security-profile WIFI
+
+ap-group name default
+删除之前设置的默认
+undo vap-profile default wlan 1 radio all
+最终调用我们新创建的
+vap-profile WIFI wlan 1 radio all
 ```
 
+1、SSID模板：我们可以通过创建模板形式，在模板下面定义我们需要的SSID名称，方便调用
 
+2、安全模板：通过创建安全模板形式，来定义不通的认证方式、密码
+
+3、VAP模板：当我们创建完SSID模板、安全模板后，我们需要关联它，这时候VAP的作用就是来关联各种业务相关的模板。
+
+4、AP组：当AP上线成功后，它会加入到系统默认的default组，组的作用是来把相同区域的AP放在里面，然后可以集中进行配置，比如我们VAP模板最终是调用在AP组下面。
 
 # 查看本地arp表内容
 
