--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -666,7 +666,86 @@ undo vap-profile default wlan 1 radio all
 vap-profile WIFI wlan 1 radio all
 ```
 
+WLAN 简单配置示例：
 
+ **AC基础配置**
+
+```
+[AC6605]vlan batch 100 101 #创建vlan 
+[AC6605]dhcp enable #开启DHCP服务 VLAN配置 
+[AC6605]int vlan 100 
+[AC6605-Vlanif100]description AP_Manage 
+[AC6605-Vlanif100]ip add 192.168.100.254 24 
+[AC6605-Vlanif100]dhcp select interface #为DHCP选择源接口 
+[AC6605-Vlanif100]quit 
+[AC6605]int vlan 101 
+[AC6605-Vlanif101]description USER 
+[AC6605-Vlanif101]ip add 192.168.101.254 24 
+[AC6605-Vlanif101]dhcp select interface #为DHCP选择源接口 
+[AC6605-Vlanif101]quit 
+[AC6605]capwap source interface Vlanif 100 #为capwap隧道绑定vlan
+```
+
+**AC无线配置**
+
+```
+[AC6605]wlan #进入无线配置视图
+[AC6605-wlan-view]
+ 
+[AC6605-wlan-view]regulatory-domain-profile name office-domain #创建域管理模板，名称为office-domain
+[AC6605-wlan-regulate-domain-office-domain]country-code CN #配置国家代码
+[AC6605-wlan-regulate-domain-office-domain]quit
+ 
+[AC6605-wlan-view]ssid-profile name office-ssid #创建SSID模板，名称为office-ssid
+[AC6605-wlan-ssid-prof-office-ssid]ssid office #配置SSID名称为office
+[AC6605-wlan-ssid-prof-office-ssid]quit
+ 
+[AC6605-wlan-view]security-profile name office-security #创建安全策略，名称为office-security
+[AC6605-wlan-sec-prof-office-security]security wpa-wpa2 psk pass-phrase 12345678
+9 aes #SSID密码为123456789
+ 
+[AC6605-wlan-view]vap-profile name office-vap #创建VAP模板
+[AC6605-wlan-vap-prof-office-vap]forward-mode direct-forward #配置业务数据转发模式
+[AC6605-wlan-vap-prof-office-vap]security-profile office-security #绑定安全策略
+[AC6605-wlan-vap-prof-office-vap]ssid-profile office-ssid #绑定SSID模板
+[AC6605-wlan-vap-prof-office-vap]service-vlan vlan-id 101 #绑定业务VLAN
+ 
+[AC6605-wlan-view]ap-group name office-ap-group #创建AP组，名称为office-ap-group
+[AC6605-wlan-ap-group-office-ap-group]regulatory-domain-profile office-domain #绑定域模板
+[AC6605-wlan-ap-group-office-ap-group]vap-profile office-vap wlan 1 radio 0 #绑定vap模板到射频卡0上
+[AC6605-wlan-ap-group-office-ap-group]vap-profile office-vap wlan 1 radio 1 #绑定vap模板到射频卡1上
+ 
+[AC6605-wlan-view]ap-id 0 ap-mac 00e0-fc79-4b40 添加AP，APmac
+[AC6605-wlan-ap-0]ap-group office-ap-group #添加到AP组中
+```
+
+**AC接口配置**
+
+```
+[AC6605]int g0/0/1
+[AC6605-GigabitEthernet0/0/1]port link-type trunk
+[AC6605-GigabitEthernet0/0/1]port trunk allow-pass vlan 100 101
+```
+
+**Switch配置**
+
+```
+[Switch]vlan batch 100 101 #创建vlan
+[Switch]int g0/0/24]int g0/0/24
+[Switch-GigabitEthernet0/0/24]description to_AC
+[Switch-GigabitEthernet0/0/24]port link-type trunk
+[Switch-GigabitEthernet0/0/24]port trunk allow-pass vlan 100 101
+ 
+[Switch]int g0/0/1
+[Switch-GigabitEthernet0/0/1]description to_AP
+[Switch-GigabitEthernet0/0/1]port link-type trunk
+[Switch-GigabitEthernet0/0/1]port trunk pvid vlan 100
+[Switch-GigabitEthernet0/0/1]port trunk allow-pass vlan 100 101
+```
+
+
+
+遇到问题是：配置好交换机 ap ac ap不上线， 原因是交换机连接ap的口未配置pvid 导致数据不识别，所以dhcp未能接受到包
 
 
 
