--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -656,7 +656,7 @@ security  wpa2 psk pass-phrase 88888888 aes
 3、VAP模板：当我们创建完SSID模板、安全模板后，我们需要关联它，这时候VAP的作用就是来关联各种业务相关的模板。
 创建vap 文件
 vap-profile  name WIFI
-ssid-profile  WIFI
+ssid-profile  WIFI 
 security-profile WIFI
 4、AP组：当AP上线成功后，它会加入到系统默认的default组，组的作用是来把相同区域的AP放在里面，然后可以集中进行配置，比如我们VAP模板最终是调用在AP组下面。
 ap-group name default
@@ -664,9 +664,33 @@ ap-group name default
 undo vap-profile default wlan 1 radio all
 最终调用我们新创建的
 vap-profile WIFI wlan 1 radio all
+
+capwap source interface命令用来配置AC建立CAPWAP隧道使用的接口，作为AC的源接口。
+
+undo capwap source interface命令用来配置AC不再使用接口作为源接口。
 ```
 
-WLAN 简单配置示例：
+
+
+CAPWAP协议
+
+    竟然FITAP需要寻找AC，那么他们之间就有一种协议来构建通信，这个协议就是CAPWAP，CAPWAP（全称ControlAnd Provisioning of Wireless Access Points Protocol Specification无线接入点控制和配置协议）是由IETE定义出来的公有标准，实现以下几个重要功能
+    1、包括AC对AP的自动发现以及状态维护
+    2、AC对AP进行管理、业务配置下发 
+    3、客户端的信息通过AP发送CAPWAP协议告诉AC，AC进行维护 
+    4、客户端的业务数据也可以通过CAPWAP交给AC进行转发（可选，隧道转发才需要用到）
+
+
+
+
+
+ ©著作权归作者所有：来自51CTO博客作者网络之路一天的原创作品，请联系作者获取转载授权，否则将追究法律责任
+2、AP上线的那些事儿（1）capwap建立过程、设备初始化以及二层上线
+https://blog.51cto.com/ccieh3c/2662338
+
+
+
+WLAN 简单配置示例
 
  **AC基础配置**
 
