--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -383,6 +383,16 @@ MAC 是确定网络设备身份，
 
 网络节点传输协议：
 
+在AC + FIT AP的组网架构中，AC对FIT AP进行集中的配置管理，AC和AP之间采用CAPWAP（Control and Provisioning of Wireless Access Points）协议进行通信。	
+
+
+
+
+
+
+
+
+
 
 
 ## 网络工具
@@ -700,12 +710,12 @@ WLAN 简单配置示例
 [AC6605]int vlan 100 
 [AC6605-Vlanif100]description AP_Manage 
 [AC6605-Vlanif100]ip add 192.168.100.254 24 
-[AC6605-Vlanif100]dhcp select interface #为DHCP选择源接口 
+[AC6605-Vlanif100]dhcp select interface #为DHCP选择源接口 ，为AP设备分配IP
 [AC6605-Vlanif100]quit 
 [AC6605]int vlan 101 
 [AC6605-Vlanif101]description USER 
 [AC6605-Vlanif101]ip add 192.168.101.254 24 
-[AC6605-Vlanif101]dhcp select interface #为DHCP选择源接口 
+[AC6605-Vlanif101]dhcp select interface #为DHCP选择源接口 ，业务IP
 [AC6605-Vlanif101]quit 
 [AC6605]capwap source interface Vlanif 100 #为capwap隧道绑定vlan
 ```
@@ -732,7 +742,7 @@ WLAN 简单配置示例
 [AC6605-wlan-vap-prof-office-vap]forward-mode direct-forward #配置业务数据转发模式
 [AC6605-wlan-vap-prof-office-vap]security-profile office-security #绑定安全策略
 [AC6605-wlan-vap-prof-office-vap]ssid-profile office-ssid #绑定SSID模板
-[AC6605-wlan-vap-prof-office-vap]service-vlan vlan-id 101 #绑定业务VLAN
+[AC6605-wlan-vap-prof-office-vap]service-vlan vlan-id 101 #绑定业务VLAN ，需要指定否则 会使用 Ap的那个地址池
  
 [AC6605-wlan-view]ap-group name office-ap-group #创建AP组，名称为office-ap-group
 [AC6605-wlan-ap-group-office-ap-group]regulatory-domain-profile office-domain #绑定域模板
