--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -567,8 +567,146 @@ port default vlan 10
 两个二层交换机，一个三层交换机
 在三层交换机上设置vlan 并在vlan 中添加ip 为网关，网关ip为二层互联的同网段ip 一般为254 或者1
 
-
 三层交换机开启dhcp
+
+
+
+以AC作为AP的DHCP服务器为例。AC作为DHCP服务器为AP分配IP地址有两种配置方式：
+
+- 基于全局地址池：在DHCP服务器的系统视图下创建IP地址池，在接口视图下配置服务器采用全局地址池来为客户端分配IP地址、网关、DNS服务器地址等信息。
+- 基于接口地址池：在DHCP服务器的接口视图下配置服务器采用接口地址池来为客户端分配IP地址、网关、DNS服务器地址等信息。
+
+两者的差异在于全局地址池方式支持DHCP中继场景，接口地址池方式则不支持DHCP中继场景。
+
+- 基于全局地址池的DHCP服务器的配置示例如下：
+
+  1. 在AC上创建全局地址池为AP提供地址。
+
+     ```
+     <AC> system-view
+     [AC] dhcp enable  //全局模式下开启DHCP功能
+     [AC] ip pool huawei  //创建全局地址池
+     [AC-ip-pool-huawei] network 10.23.10.0 mask 24  //配置全局地址池下可分配的网段地址
+     [AC-ip-pool-huawei] gateway-list 10.23.10.1  //为AP配置网关地址
+     [AC-ip-pool-huawei] option 43 sub-option 2 ip-address 10.23.100.1  //配置option 43，为AP指定AC的IP地址
+     [AC-ip-pool-huawei] quit
+     [AC] interface vlanif 100
+     [AC-Vlanif100] dhcp select global  //开启接口采用全局地址池的DHCP Server功能
+     [AC-Vlanif100] quit
+     ```
+
+  2. 在Switch上配置DHCP中继，代理AC分配IP地址。
+
+     ```
+     <Switch> system-view
+     [Switch] dhcp enable  //开启DHCP功能
+     [Switch] interface vlanif 10
+     [Switch-Vlanif10] ip address 10.23.10.1 24
+     [Switch-Vlanif10] dhcp select relay  //开启DHCP中继功能
+     [Switch-Vlanif10] dhcp relay server-ip 10.23.100.1  //配置DHCP中继所代理的DHCP服务器的IP地址
+     [Switch-Vlanif10] quit
+     ```
+
+- 基于接口地址池的DHCP服务器的配置示例如下：
+
+  1. 开启DHCP功能。
+
+     ```
+     <AC> system-view 
+     [AC] dhcp enable
+     ```
+
+  2. 使能接口VLANIF100接口采用接口地址池的DHCP服务器功能。
+
+     ```
+     [AC] interface vlanif 100
+     [AC-Vlanif10] ip address 10.23.100.1 255.255.255.0 //配置接口IP地址
+     [AC-Vlanif10] dhcp select interface //配置基于接口地址池的DHCP服务器功能
+     [AC-Vlanif10] quit
+     ```
+
+1. 配置AP上线
+
+   
+
+   1. 创建AP组，用于将相同配置的AP都加入同一个AP组中。
+
+      ```
+      [AC] wlan 
+      [AC-wlan-view] ap-group name ap-group1 
+      [AC-wlan-ap-group-ap-group1] quit
+      [AC-wlan-view] quit
+      ```
+
+   2. 配置AC的源接口。
+
+      ```
+      [AC] capwap source interface vlanif 100
+      ```
+
+   3. 在AC上添加AP。
+
+      添加AP有三种方式：离线导入AP、自动发现AP以及手工确认未认证列表中的AP。
+
+      - 离线导入AP：预先配置AP的MAC地址和SN，当AP与AC连接时，如果AC发现AP和预先增加的AP的MAC地址和SN匹配，则AC开始与AP建立连接。
+
+        ```
+        <AC> system-view
+        [AC] wlan
+        [AC-wlan-view] ap auth-mode mac-auth  //配置认证模式为MAC认证
+        [AC-wlan-view] ap-id 1 type-id 115 ap-mac 0025-9e07-8270  //离线添加AP
+        ```
+
+      - 自动发现AP：当配置AP的认证模式为不认证或配置AP的认证模式为MAC或SN认证且将AP加入AP白名单中，则当AP与AC连接时，AP将被AC自动发现并正常上线。
+
+        - 配置AP的认证模式为不认证
+
+          ```
+          <AC> system-view
+          [AC] wlan
+          [AC-wlan-view] ap auth-mode no-auth
+          ```
+
+        - 配置AP的认证模式为MAC认证且将AP加入AP白名单中
+
+          ```
+          <AC> system-view
+          [AC] wlan
+          [AC-wlan-view] ap auth-mode mac-auth  //配置认证模式为MAC认证
+          [AC-wlan-view] ap whitelist mac 0025-9e07-8270  //将AP添加到白名单中
+          ```
+
+        - 配置AP的认证模式为SN认证且将AP加入AP白名单中
+
+          ```
+          <AC> system-view
+          [AC] wlan
+          [AC-wlan-view] ap auth-mode sn-auth  //配置认证模式为SN认证
+          [AC-wlan-view] ap whitelist sn 08PE56430071  //将AP添加到白名单中
+          ```
+
+      - 手工确认未认证列表中的AP：当配置AP的认证模式为MAC或SN认证但AP没有离线导入且不在已设置的AP白名单中，则该AP会被记录到未授权的AP列表中。需要用户手工确认后，此AP才能正常上线。
+
+        ```
+        <AC> system-view
+        [AC] wlan
+        [AC-wlan-view] ap auth-mode mac-auth  //配置认证模式为MAC认证
+        [AC-wlan-view] display ap unauthorized record
+        [AC-wlan-view] ap-confirm mac 0025-9e07-8270  //手工确认认证未通过的AP，允许其上线
+        ```
+
+AP 不上线问题排查手册
+
+https://support.huawei.com/enterprise/zh/doc/EDOC1100155254
+
+## ensp里面的ce6800开启以后端口全是 shutdown
+
+undo shutdown
+
+需要 提交 commit 之后触发命令 
+
+
+
 ```
 # 开启dhcp
 
@@ -590,7 +728,43 @@ dhcp select global
 excluded-ip-address  192.168.1.3 
 # 绑定一些设备的固定mac地址
 static-bind ip-address  192.168.1.3   mac-address
+
+
+开启 dhcp 服务。
+[LSW 1]dhcp enable
+
+创建 AP ip 地址池（appool）名称可自定义。配置地址池网段、网关。
+[LSW 1]ip pool appool
+[LSW 1-ip-pool-appool]network 1.1.1.0 mask 255.255.255.0
+[LSW 1-ip-pool-appool]gateway-list 1.1.1.1
+
+设置 AC 服务器地址。
+[LSW 1-ip-pool-appool]option 43 sub-option 2 ip-address 20.0.0.20
+[LSW 1-ip-pool-appool]quit
+
+进入虚拟接口视图。绑定全局 DHCP 。
+[LSW 1]interface Vlanif 30
+[LSW 1-Vlanif30]dhcp select global
+[LSW 1-Vlanif30]quit
+
+创建用户 ip 地址池（userpool）名称可自定义。配置地址池网段、网关、DNS 设置。
+[LSW 1]ip pool userpool
+[LSW 1-ip-pool-userpool]network 2.2.2.0 mask 255.255.255.0
+[LSW 1-ip-pool-userpool]gateway-list 2.2.2.1
+[LSW 1-ip-pool-userpool]dns-list 8.8.8.8 9.9.9.9
+[LSW 1-ip-pool-userpool]quit
+
+进入虚拟接口视图。绑定全局 DHCP。
+[LSW 1]interface Vlanif 40
+[LSW 1-Vlanif40]dhcp select global
+
 ```
+
+
+
+
+
+
 
 #acl 访问控制
 acl 2000 
