--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -760,9 +760,20 @@ static-bind ip-address  192.168.1.3   mac-address
 
 ```
 
+#### AR路由器排除IP地址的配置方法
+
+在接口上直接添加 dhcp 和排除地址
+
+dhcp server excluded-ip-address 10.10.10.11 10.10.10.20
+
+ ip address 192.168.1.1 255.255.255.0 
+ dhcp select interface
+ dhcp server excluded-ip-address 192.168.1.100 192.168.1.200 
+ dhcp server dns-list 192.168.1.100 
 
 
 
+undo t m 
 
 
 
@@ -770,6 +781,47 @@ static-bind ip-address  192.168.1.3   mac-address
 acl 2000 
 
 acl 编号
+
+ACL 配置访问控制
+
+```
+acl name test advance
+rule  deny  ip source  1.1.1.0 0.0.0.255 destination 2.2.2.0 0.0.0.255
+rule  permit  ip source  any  destination  any
+int g0/0/0	
+traffic-filter inbound  acl  name  test
+```
+
+
+
+ACL 配置转换地址转换,配置基本的acl 就行了
+
+
+
+##### NAT网络地址转换协议
+
+```
+创建acl
+acl 2000
+添加规则
+rule  permit  source  172.16.1.0 0.0.0.255
+q
+创建地址转换组
+nat address-group  1 100.100.100.2 100.100.100.2
+进入接口
+int g0/0/1
+绑定转换组
+nat  outbound  2000  address-group  1
+
+```
+
+
+
+在出去的网口配置 内网地址映射
+
+nat server   global  64.1.1.3  inside  172.16.100.1
+
+ip route-static 0.0.0.0  0.0.0.0  64.1.1.10
 
 #挑选数据包 
 rule permit source 192.168.1.0  0.0.0.255
@@ -1035,14 +1087,11 @@ ip route-static 192.16.1.0 255.255.255.0 192.17.1.2
 
 3.设置路由器ip 并添加静态路由 指向网关
 
-
-只要是不同网段的 就需要设置路由
-
-
+内部所有的地址段 指向 下一跳 在路由器上添加回来路由转换
+ip route-static 0.0.0.0 0.0.0.0 10.10.10.1
 
 
-
-
+只要是不是直连的网段都需要添加路由。
 
 
 ### 二层转发：
