--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -1118,6 +1118,10 @@ ip route-static 0.0.0.0 0.0.0.0 10.10.10.1
 只要是不是直连的网段都需要添加路由。
 
 
+两个直连的不同网段的设备相联系，把路由器的不同的接口设置为 不同网段的网关即可实现不同网段的通信
+如果跨多个路由器需要，在每个不直连的路由器需要添加 去的路由和回来的路由才能实现不同网段的通信
+
+
 ### 二层转发：
 
 根据检测mac直接进行端口转发。
