--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -1113,7 +1113,7 @@ ip route-static 0.0.0.0 0.0.0.0 10.10.10.1
 两个直连的不同网段的设备相联系，把路由器的不同的接口设置为 不同网段的网关即可实现不同网段的通信
 如果跨多个路由器需要，在每个不直连的路由器需要添加 去的路由和回来的路由才能实现不同网段的通信
 
-
+fa'g
 
 ### 二层转发：
 
@@ -1251,3 +1251,7 @@ AC可靠性：N+1
 
 
 ```
+## 防火墙配置
+
+#### 信任域
+非信任域
