--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -187,6 +187,13 @@ router id
 工作过程：
 1. 建立邻居
 
+启动 ospf  宣告直连网段
+
+net 192.168.2.0 0.0.0.255 
+
+查看ospf  邻居
+dis ospf peer brief 
+dis ospf lsdb 
 ## IPV6
 
 ### NDP 协议  邻居发现协议
