--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -466,6 +466,10 @@ E类：224-239 240.0.0.1～255.255.255.254
 
 判断一个地址能不能用：主机位不能全为0或者全为255
 
+IP地址的第一个地址用于标识一个网络
+最后一个地址是广播地址 也就是该网段全1的地址
+
+
 子网号
 
 IP地址子网掩码判断：
