--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -499,6 +499,8 @@ IP地址子网掩码判断：
 
 
 ### 路由器
+静态路由是：支持手动配置优先级，可通过配置目的地址/掩码相同，优先级不同、下一跳不同的静态路由实现转发路径的备份
+浮动路由：主路由的备份，保证链路故障时提供备份路由。主用路由下一跳可达时该备份路由不会出现在路由表中
 
 ip route-static 192.168.3.1 255.255.255.0 192.168.4.1
 
