--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -63,7 +63,7 @@ OSPF（Open Shortest Path First）协议共有5种分组类型，包括：
 
 Hello 分组：用于发现邻居、建立邻居关系和检测邻居状态的分组。
 
-DBD（Database Description）分组：用于在邻居之间传输每个路由器的链路状态数据库摘要信息，以确定是否存在差异。
+DD（Database Description）分组：用于在邻居之间传输每个路由器的链路状态数据库摘要信息，以确定是否存在差异。
 
 LS Request（Link State Request）分组：用于请求某个邻居发送某些路由器的链路状态信息。
 
@@ -72,6 +72,24 @@ LS Update（Link State Update）分组：包含某个路由器更新后的链路
 LS Acknowledge（Link State Acknowledge）分组：用于确认接收到LS Update分组并向发送方报告接收情况。
 
 DIS和DR与所路由器互相都是邻接关系
+g
+
+工作过程：
+1.形成邻居关系
+2.形成邻接关系
+3.计算路由
+
+```
+添加 ospf 
+ospf  1 routerid 1.1.1.1
+添加进区域
+area 0
+宣告网络
+network 192.168.2.0 0.0.0.255 
+查看 连接状态的数据库
+dis ospf lsdb 
+
+```
 
 
 
