--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -452,6 +452,18 @@ port link-type access
 
 ```
 
+trunck 口添加pvid  经过的数据包会去掉对应的vlan 标签
+
+单臂路由：
+创建子接口
+int g0/0/1.10 
+添加 vlan
+dot1q termination vid 10 
+添加网关
+ip add 192.168.10.254 24 
+启用arp
+arp broadcast enbable
+
 ## 子网掩码
 
 就是用来分割子网和区分那些ip是同一个网段的，那些不是同一网段的
