--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -559,6 +559,12 @@ nat server protocol tcp global current-interface www inside  192.168.200.20  www
 
 ```
 
+### spt 生成树
+#### 环路
+环路影响：
+1. 广播风暴
+2. mac 地址漂移
+3. 
 
 
 
