--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -563,9 +563,11 @@ nat server protocol tcp global current-interface www inside  192.168.200.20  www
 #### 环路
 环路影响：
 1. 广播风暴
-2. mac 地址漂移
+2. mac 地址漂移 
 3. 
 
+### 链路可靠性
+使用链路聚合
 
 
 
