--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -926,6 +926,15 @@ radio 1                      ##0为2.4G/1为5G
 
 全双工，自动协商速率
 
+### lacp 自动链路聚合
+
+### 堆叠 把多个交换机拼成逻辑上的一个
+
+核心层 css 
+接入层 istack 
+
+
+
 使用命令：
 
 ```
