--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -933,6 +933,11 @@ radio 1                      ##0为2.4G/1为5G
 核心层 css 
 接入层 istack 
 
+ACL 控制命令  按照rule 编号从小到大执行的
+
+NAPT 网络地址端口转换协议
+
+AC 连接方式：
 
 
 使用命令：
