--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -79,6 +79,12 @@ g
 2.形成邻接关系
 3.计算路由
 
+ospf 引入 rip 协议
+
+rip 引入 ospf 路由 cost 1-15 
+进入rip 引入ospf 路由
+import-route ospf 1 cost 3
+
 ```
 添加 ospf 
 ospf  1 routerid 1.1.1.1
