--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -85,6 +85,9 @@ rip 引入 ospf 路由 cost 1-15
 进入rip 引入ospf 路由
 import-route ospf 1 cost 3
 
+通过路由引入可以实现路由信息在不同的路由协议之间传递
+
+
 ```
 添加 ospf 
 ospf  1 routerid 1.1.1.1
