--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -102,6 +102,12 @@ dis ospf peer
 路由表
 dis ospf routing-table
 
+路由回灌：可能造成环路
+
+LSA 泛洪
+
+router id 如果没配置 则选择loopback 最大的IP地址作为router id
+
 ```
 
 
