--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -202,6 +202,14 @@ NCP即网络控制协议，用于建立和配置网络层协议
 
 ### OSPF 协议
 
+优点：
+
+1. 以累计链路开销作为参考值
+2. 采用组播兴试收发部分协议报文
+3. 支持区域划分
+4. 支持对等价路由进行负载分担
+5. 支持报文认证
+
 在OSPFv2中，收到类型未知的LSA将直接丢弃。
 
 ospf 属于一个区域
@@ -227,6 +235,17 @@ net 192.168.2.0 0.0.0.255
 查看ospf  邻居
 dis ospf peer brief 
 dis ospf lsdb 
+
+
+
+
+
+
+
+
+
+
+
 ## IPV6
 
 ### NDP 协议  邻居发现协议
