--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -202,6 +202,10 @@ NCP即网络控制协议，用于建立和配置网络层协议
 
 ### OSPF 协议
 
+自动学习路由
+
+
+
 优点：
 
 1. 以累计链路开销作为参考值
@@ -230,7 +234,11 @@ router id
 
 启动 ospf  宣告直连网段
 
-net 192.168.2.0 0.0.0.255 
+net 192.168.2.0 0.0.0.255
+
+查看ospf 信息
+
+dis ospf  brief  
 
 查看ospf  邻居
 dis ospf peer brief 
