--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -232,6 +232,16 @@ router id
 工作过程：
 1. 建立邻居
 
+Down 是邻居的初始数
+
+init  收到hello报文但是自己的routerid 不在收到的hello 邻居报文列表中
+
+2-way
+
+发现自己的routerid 在收到的hello报文列表中
+
+
+
 启动 ospf  宣告直连网段
 
 net 192.168.2.0 0.0.0.255
