--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -261,6 +261,8 @@ dis ospf  brief
 dis ospf peer brief 
 dis ospf lsdb 
 
+ospf 要求所有的区域要和区域0相连接，如果无法连接到区域0需要建立虚连接
+vlink peer 对端routerid  需要在两个区域的接口都要配置
 
 
 
