--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -266,6 +266,12 @@ vlink peer 对端routerid  需要在两个区域的接口都要配置
 
 ospf 规定 sub区域不能引入外部路由，避免大量的外部路由引入造成设备的资源消耗
 
+NASS 
+
+ospf 路由表合并 asbr
+
+ospf 1 asbr-summary 172.17.0.0 255.255.248.0
+
 
 
 
