--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -132,10 +132,10 @@ BGP特点：
 1.使用TCP作为传输协议，端口号179
 2.BGP路由聚合方式：静态路由（直接在network聚合路由）、手动聚合、自动聚合
 3.BGP不会周期性泛洪，只传递更新的路由信息
-4.矢量路由协议：BGP向外通告路由时必须保证该路由在自己的BGP表中是最优的
+4.路径矢量路由协议：BGP向外通告路由时必须保证该路由在自己的BGP表中是最优的
 5.无环路：
 
-6.
+6. bgp speaker 
 
 
 
