--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -271,6 +271,21 @@ NASS
 ospf 路由表合并 asbr
 
 ospf 1 asbr-summary 172.17.0.0 255.255.248.0
+#### ospf 安全
+slient-interface  设置终端设备不回复hello包
+
+报文认证，只有认证过得报文才会通过
+
+### isis
+用在运营商端
+
+#### 扩展性强
+支持多种协议
+#### 承载更多的路由
+
+#### 更快的收敛速度
+局部计算
+![Alt text](image.png)
 
 
 
