--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -159,6 +159,18 @@ peer 124.124.124.124 as 100
 peer 124.124.124.124  connect-interface  LoopBack  123
 ```
 
+import-route 引入某种协议的路由
+
+
+
+BGP 路由聚合 
+
+
+
+
+
+
+
 # EBGP
 
 
