--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -104,6 +104,12 @@ dis ospf routing-table
 
 路由回灌：可能造成环路
 
+ospf 使用filter-policy 
+
+ospf 1 
+引入创建好的acl
+filter-policy 2000 import
+
 LSA 泛洪
 
 router id 如果没配置 则选择loopback 最大的IP地址作为router id
