--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -116,7 +116,16 @@ router id 如果没配置 则选择loopback 最大的IP地址作为router id
 
 ```
 
+OSPF 引入路由环路问题 
+添加过滤策略
+![Alt text](image-1.png)
+添加路由tag
+需要修改isis的类型为 wide
+isis 1
+cost-type wide 
 
+查看路由详情
+dis ip routing-table verbos 
 
 
 
