--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -116,7 +116,7 @@ router id 如果没配置 则选择loopback 最大的IP地址作为router id
 
 ```
 
-OSPF 引入路由环路问题 
+OSPF 双点双向的引入路由环路问题 
 添加过滤策略
 ![Alt text](image-1.png)
 添加路由tag
@@ -185,8 +185,14 @@ BGP 路由聚合
 - 从ebgp 对等体会发给相对应的对等体
 - ibgp 收到路由信息 不会发给其他ibgp对等体 （防环）
 
+BGP状态机： 
 
-
+idel ： 开始准备tcp的连接并监控对等体，启用bgp
+connect 正在建立tcp连接，等待完成中，认证都是在tcp建立期间完成的。如果tcp连接建立失败进入active 状态，反复尝试连接
+active tcp 连接建立失败反复尝试tcp连接
+OpenSent  tcp 建立成功发送open包 Open 携带参数协商对等体建立
+Openconfirm 参数 能力特性协商成功自己发送keepalive包，等待对方的keepalive包
+Established 已经收到对方的keepalive包双方能力特性经协商发现一致，开始是用update 更新路由信息
 
 
 
