--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -110,6 +110,10 @@ ospf 1
 引入创建好的acl
 filter-policy 2000 import
 
+为了防环通过filter-policy对引入的的路在发布时进行过滤
+
+
+
 LSA 泛洪
 
 router id 如果没配置 则选择loopback 最大的IP地址作为router id
@@ -193,7 +197,6 @@ active tcp 连接建立失败反复尝试tcp连接
 OpenSent  tcp 建立成功发送open包 Open 携带参数协商对等体建立
 Openconfirm 参数 能力特性协商成功自己发送keepalive包，等待对方的keepalive包
 Established 已经收到对方的keepalive包双方能力特性经协商发现一致，开始是用update 更新路由信息
-
 
 
 
