--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -131,6 +131,15 @@ cost-type wide
 查看路由详情
 dis ip routing-table verbos 
 
+## 堆叠
+
+配置对得mad域
+mad domain domain-id
+
+堆叠主备倒换
+slave switchover 
+
+## 配置集群
 
 
 
