--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -143,6 +143,8 @@ slave switchover
 
 
 
+
+
 # NAT
 1. 静态NAT设计   适用于有较多静态IP且客户端需要使用固定IP地址的场景
 2. 动态NAT  取地址池中的地址给用户访问Internet
@@ -1452,9 +1454,19 @@ VRRP 双机热备
 AP 只能看到一个IP
 配置命令：
 ```
+vrrp vrid 10  virtual-ip 192.168.10.254
 
 
-```pa
+
+```
+
+stp region-configuration 
+region-name test
+reginon-level 1 
+instance 1 vlan 10 20 
+instance 2 vlan 30 40 
+active region-configuration 
+
 
 
 MPLS  专线 数据打标签
