--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -1467,6 +1467,9 @@ instance 1 vlan 10 20
 instance 2 vlan 30 40 
 active region-configuration 
 
+stp instance 1  priority 4096 
+
+stp instance 2  priority 8192
 
 
 MPLS  专线 数据打标签
