--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -1491,7 +1491,6 @@ AC可靠性：N+1
 
 ```
 配置设备telnet 
-=======
 ## 防火墙配置
 
 #### 信任域
@@ -1509,3 +1508,28 @@ mac 地址震荡：
 小网络：交换机指示灯闪烁频繁
 
 环路问题解决： 生成树
+
+
+# 组播路由技术
+
+pim  sm 稀疏模式：
+
+完全都没有成员，组播源需要和rp连接，
+
+
+pim dm  密集模式：
+假设所有的都有
+
+igmp 的协议在组播的作用是：通过igmp 消息告诉路由器发送leave 包告诉路由器离开某个组
+
+igmpv3 相对v2有那些改进
+
+
+设置组播：
+muticast  routing-enable
+igmp  enable
+igmp version 3 
+连接组播源的需要打开pim
+pim  dm
+
+
