--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -1493,6 +1493,13 @@ AC可靠性：N+1
 配置设备telnet 
 ## 防火墙配置
 
+ACL 过滤包的缺陷：
+- 逐包检测性能低
+- acl 规则难适应动态需求
+- acl 不检测应用数据
+- 无关联报文分析，容易被欺骗
+
+
 #### 信任域
 非信任域
 
@@ -1536,3 +1543,5 @@ igmp snooping 可以解决什么问题
 只有加入组播的接口才会发送组播
 
 RA 路由通告
+
+
