--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -1493,6 +1493,8 @@ AC可靠性：N+1
 配置设备telnet 
 ## 防火墙配置
 
+防火墙默认不通过任何包，需要配置策略
+
 ACL 过滤包的缺陷：
 - 逐包检测性能低
 - acl 规则难适应动态需求
@@ -1503,6 +1505,17 @@ ACL 过滤包的缺陷：
 #### 信任域
 非信任域
 
+允许ping service-manage permit ping 
+
+firewall zone om 添加 防火墙的域 
+
+
+# 常见设备安全加固
+- 关闭不使用的业务和协议端口
+- 废弃不安全的访问通道 telnet 不安全 安全的使用 ssh v2
+  - 传输 ftp tftp 需要使用  sftp 代替
+  - snmpv3 代替 v1 v2 版本
+  - https 代替 http  
 # 网络问题定位
 
 思路和方法：
