--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -1557,4 +1557,16 @@ igmp snooping 可以解决什么问题
 
 RA 路由通告
 
+# VPN
 
+## SSL VPN   应用层 vpn
+
+
+## MPLS VPN
+IPSec VPN   不支持组播
+GRE vpn 不安全 支持组播
+
+IPSec 
+安全协议 ESP AH
+
+L2TP 扩展了点到点协议PPP的应用，是一种在远程办公场景中
