--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -1452,6 +1452,7 @@ service-vlan vlan-pool  pool-name
 VRRP 双机热备 
 两台AC组成一个VRRP组，主备AC对AP始终显示为同一个虚拟IP地址，主AC通过Hot StandBy 主备信道同步业务信息到备AC上
 AP 只能看到一个IP
+vrrp 的包只能夸三层
 配置命令：
 ```
 vrrp vrid 10  virtual-ip 192.168.10.254
@@ -1570,3 +1571,4 @@ IPSec
 安全协议 ESP AH
 
 L2TP 扩展了点到点协议PPP的应用，是一种在远程办公场景中
+
