--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -1461,6 +1461,8 @@ vrrp vrid 10  virtual-ip 192.168.10.254
 
 ```
 
+bfd 在 ospf 检测故障
+
 stp region-configuration 
 region-name test
 reginon-level 1 
